react js boilar plate

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@
 PORT=3001
 
 REACT_APP_APP_NAME="Jan Utkarsh"
-REACT_APP_API_URL="http://localhost:9050/"
+REACT_APP_API_URL="http://192.168.1.179:9050/"
 
 REACT_APP_ENV="dev"
 
